--- a/src/main/webapp/components/header.jspf
+++ b/src/main/webapp/components/header.jspf
@@ -1,8 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" %>
 <header>
     <nav class="navbar navbar-expand navbar-dark bg-dark p-3">
         <div class="container d-flex">
-            <a href="index.jsp" class="navbar-brand">StockApp</a>
+            <a href="../index.jsp" class="navbar-brand">StockApp</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Products</a>
